--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
 amazon.s3.bucket-name=awesome-project-java-flutter
 amazon.s3.endpoint=https://awesome-project-java-flutter.s3-sa-east-1.amazonaws.com/
-amazon.s3.access-key=123
+amazon.s3.access-key=${ACCESS_KEY}
 amazon.s3.secret-key=${SECRET_KEY}
